--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "taipyStudio.gUI.elementsFilePaths": []
+    "taipyStudio.gUI.elementsFilePaths": [],
+    "projectManager.git.baseFolders": [
+        "C:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub"
+    ]
 }
