--- a/Data_Engineer/Docker/Dockerfile
+++ b/Data_Engineer/Docker/Dockerfile
@@ -1,13 +1,14 @@
-FROM python:3.10-slim-bullseye
+FROM python:3.12-slim-bullseye
 
-COPY requirements.txt .
+# Set the working directory in the container
+WORKDIR /app
 
-RUN pip install -r requirements.txt
+# Copy the current directory contents into the container at /app
+COPY . /app
 
-RUN mkdir -p app
-
-COPY ./App app
-
+# Install any needed dependencies specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+# Make port 5000 available to the world outside this container
 EXPOSE 5000
 
 CMD [ "python", "app.py", "--host", "0.0.0.0", "--port", "5000" ]
